# mcp-psr-output-analysis

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  REPO_INDEX.md  Results.md  TOOLS.md  psrio.py  pyproject.toml  requirements.txt  sddp_html_to_csv.py
.claude-plugin/: plugin.json
decision-trees/: convergence.json  decision_graph.html  decision_graph.json  graph_to_html.py  marginal-costs.json  master.json  simulation.json  violations.json
docs/: convergence.md  csv-schema.md  execution-time.md  index.md  marginal-costs.md  simulation.md  violations.md
plugins/psr-output-analysis/: .mcp.json
psr/outputanalysismcp/: __init__.py  case_information.py  common.py  cost_functions.py  dataframe_functions.py  execution_time_functions.py  penalty_functions.py  policy_functions.py  server.py
psrio/: psrio.lua  sddp-dashlib.lua
sddp-output-skills/sddp-analyze/: SKILL.md
sddp-output-skills/sddp-convergence/: SKILL.md
sddp-output-skills/sddp-costs/: SKILL.md
sddp-output-skills/sddp-output-format/: SKILL.md
sddp-output-skills/sddp-performance/: SKILL.md
sddp_agent/: CLAUDE.md  README.md  __init__.py  __main__.py  agent.py  get_model.py  llm.py  state.py  system_prompt.py  utils.py
sddp_agent/nodes/: __init__.py  doc_retriever.py  graph_navigator.py  initialize.py  router.py  synthesizer.py  verify_entry.py
sddp_agent/prompts/: column_resolver_prompt.txt  edge_selector_prompt.txt  router_prompt.txt  tool_selector_prompt.txt  tool_selector_resolver_prompt.txt
sddp_agent/tools/: __init__.py  catalog.py  (+2 more)
sddp_knowledge/: execution_time.json  policy.json  simulation.json
skills/: repo-edit.md  sddp-diagnose.md  sddp-full-analysis.md
tests/: inspect_penalties.py  test_server_functions.py  test_workflow_nodes.py
(+5 files in other folders)
